--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,7 +5,23 @@
         <title>Lasagna</title>
     </head>
     <body>
-        <h1>Lasanga</h1>
         <a href="../index.html">Home</a>
+        <h1>Lasanga</h1>
+        <img height="300px"width="400px" src="../img/lasagna.jpg" alt="lasanga">
+        <h2>Description</h2>
+        <p>Description of lasagna stuff</p>
+        <p>More desctiption of lasagna stuff</p>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>list</li>
+            <li>Ingredients</li>
+            <li>Here</li>
+        </ul>
+        <h3>Steps:</h3>
+        <ol>
+            <li>List</li>
+            <li>Steps</li>
+            <li>Here</li>
+        </ol>
     </body>
 </html>
