Create base chicken-burrito.html and steak.html. Update links and images in all html files.

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -2,17 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Lasagna</title>
+        <title>Steak Recipe</title>
     </head>
     <body>
         <a href="../index.html">Home</a><br>
-        <a href="chicken-burrito.html">Chicken Burrito</a><br>
-        <a href="steak.html">Steak</a>
-        <h1>Lasagna Recipe</h1>
-        <img height="300px"width="400px" src="../img/lasagna.jpg" alt="lasanga">
+        <a href="lasagna.html">Lasagna</a><br>
+        <a href="chicken-burrito.html">Steak</a>
+        <h1>Steak Recipe</h1>
+        <img height="300px"width="400px" src="../img/steak.jpg" alt="lasanga">
         <h2>Description</h2>
-        <p>Description of lasagna stuff</p>
-        <p>More desctiption of lasagna stuff</p>
+        <p>Description of steak stuff</p>
+        <p>More desctiption of steak stuff</p>
         <h3>Ingredients:</h3>
         <ul>
             <li>list</li>
