--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a>
+        <a href="recipes/lasagna.html">Lasagna</a><br>
+        <a href="recipes/chicken-burrito.html">Chicken Burrito</a><br>
+        <a href="recipes/steak.html">Steak</a>
     </body>
 </html>
