Put links in an unordered list on all html pages. Layout pretty much done, just need updated descriptions, ingredients, and steps.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/lasagna.html">Lasagna</a><br>
-        <a href="recipes/chicken-burrito.html">Chicken Burrito</a><br>
-        <a href="recipes/steak.html">Steak</a>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a><br></li>
+            <li><a href="recipes/steak.html">Steak</a></li>
+        </ul>
     </body>
 </html>
