--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -5,14 +5,17 @@
         <title>Chicken Burrito Recipe</title>
     </head>
     <body>
-        <a href="../index.html">Home</a><br>
-        <a href="lasagna.html">Lasagna</a><br>
-        <a href="steak.html">Steak</a>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="lasagna.html">Lasagna</a></li>
+            <li><a href="steak.html">Steak</a></li>
+        </ul>
+        
         <h1>Chicken Burrito Recipe</h1>
         <img height="300px"width="400px" src="../img/chicken-burrito.jpg" alt="lasanga">
         <h2>Description</h2>
         <p>Description of chicken Burrito stuff</p>
-        <p>More desctiption of chicken Burrito stuff</p>
+        <p>More description of chicken Burrito stuff</p>
         <h3>Ingredients:</h3>
         <ul>
             <li>list</li>
