--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -5,14 +5,17 @@
         <title>Steak Recipe</title>
     </head>
     <body>
-        <a href="../index.html">Home</a><br>
-        <a href="lasagna.html">Lasagna</a><br>
-        <a href="chicken-burrito.html">Steak</a>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="lasagna.html">Lasagna</a></li>
+            <li><a href="chicken-burrito.html">Chicken Burrito</a></li>
+        </ul>
+
         <h1>Steak Recipe</h1>
         <img height="300px"width="400px" src="../img/steak.jpg" alt="lasanga">
         <h2>Description</h2>
         <p>Description of steak stuff</p>
-        <p>More desctiption of steak stuff</p>
+        <p>More description of steak stuff</p>
         <h3>Ingredients:</h3>
         <ul>
             <li>list</li>
