--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,14 +5,17 @@
         <title>Lasagna</title>
     </head>
     <body>
-        <a href="../index.html">Home</a><br>
-        <a href="chicken-burrito.html">Chicken Burrito</a><br>
-        <a href="steak.html">Steak</a>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="chicken-burrito.html">Chicken Burrito</a></li>
+            <li><a href="steak.html">Steak</a></li>
+        </ul>
+
         <h1>Lasagna Recipe</h1>
         <img height="300px"width="400px" src="../img/lasagna.jpg" alt="lasanga">
         <h2>Description</h2>
         <p>Description of lasagna stuff</p>
-        <p>More desctiption of lasagna stuff</p>
+        <p>More description of lasagna stuff</p>
         <h3>Ingredients:</h3>
         <ul>
             <li>list</li>
