--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -14,19 +14,39 @@
         <h1>Lasagna Recipe</h1>
         <img height="300px"width="400px" src="../img/lasagna.jpg" alt="lasanga">
         <h2>Description</h2>
-        <p>Description of lasagna stuff</p>
-        <p>More description of lasagna stuff</p>
+        <p>Nothing beats classic lasagna. And this is the easiest recipe<br> 
+            you will ever make. It can be made ahead and it’s freezer-friendly too!</p>
+        <p>So what are you waiting for? Let's get cookin'!</p>
         <h3>Ingredients:</h3>
         <ul>
-            <li>list</li>
-            <li>Ingredients</li>
-            <li>Here</li>
+            <li>9 lasagna noodles</li>
+            <li>1 tablespoon olive oil</li>
+            <li>1 poubd ground beef</li>
+            <li>1 onion, diced</li>
+            <li>Salt and freshly ground black pepper</li>
+            <li>1 (28-ounce) can crusheed tomoatoes</li>
+            <li>1 tablespoon Italian seasoning</li>
+            <li>1 (15-ounce) package whole milk ricotta</li>
+            <li>3 1/2 cups shredded mozzarella, divided</li>
+            <li>1 large egg, beaten</li>
+            <li>1/4 cup freshly grated Parmesan</li>
+            <li>1 tablespoons chopped fresh parsley leaves</li>
         </ul>
         <h3>Steps:</h3>
         <ol>
-            <li>List</li>
-            <li>Steps</li>
-            <li>Here</li>
+            <li>Preheat oven to 350 degrees and oil a 9 x 13 baking dish</li>
+            <li>Cook lasagna noodles in large pot of boiling salt water</li>
+            <li>Heat olive oil in a large skillet over medium heat. Add <br>
+                ground beef and onion and cook until browned, about 3 to 5 minutes. <br>
+                Season with salt and pepper to taste. Drain excess fat and stir in tomatoes<br>
+                and Italian seasoning.</li>
+            <li>In a medium bowl, combine ricotta, 1/2 cup mozzarella, and egg. Set aside</li>
+            <li>Spread 1 cup of tomato mixutre on the bottom of the 9 x 13 baking dish and <br>
+                top with 3 lasagna noodles, 1/2 ricotta cheese mixture, and 1 cup mozzarella cheese. <br>
+                Repeat with second layer. Top with remaining noodles and mixtures.</li>
+            <li>Bake for 35 - 45 minutes, or until bubbling, then broil for 2 - 3 minutes.</li>
+            <li>Let cool 15 minutes</li>
+            <li>Eat it</li>
         </ol>
     </body>
 </html>
