--- a/recipes/chicken-burrito.html
+++ b/recipes/chicken-burrito.html
@@ -14,19 +14,31 @@
         <h1>Chicken Burrito Recipe</h1>
         <img height="300px"width="400px" src="../img/chicken-burrito.jpg" alt="lasanga">
         <h2>Description</h2>
-        <p>Description of chicken Burrito stuff</p>
-        <p>More description of chicken Burrito stuff</p>
+        <p>Chicken burritos are <em>life</em>... and your's has been missing these.</p>
+        <p>Do chicken burritos really even need any more of a description?</p>
         <h3>Ingredients:</h3>
         <ul>
-            <li>list</li>
-            <li>Ingredients</li>
-            <li>Here</li>
+            <li>1 cup Old El Paso Thick 'n Chunky salsa</li>
+            <li>1/2 cup water</li>
+            <li>1/2 cup uncooked instant white rice</li>
+            <li>3/4 cup shredded deli rotisserie chicken</li>
+            <li>1/2 cup shredded Cheddar cheese (2 oz)</li>
+            <li>1/4 teaspoon garlic poweder</li>
+            <li>1/2 package (11-oz size) Old El Paso flour tortillas for burriotos (four 8-inch tortillas)</li>
+            <li>Shredded lettuce, if desired</li>
+            <li>Chopped tomatoes, if desired</li>
+            <li>Jalapenos, <strong>mandatory</strong></li>
         </ul>
         <h3>Steps:</h3>
         <ol>
-            <li>List</li>
-            <li>Steps</li>
-            <li>Here</li>
+            <li>Heat oven to 375°F. In 1-quart saucepan, heat salsa and water to boiling. <br>
+                Stir in rice. Cover; remove from heat. Let stand 5 minutes.</li>
+            <li>Stir chicken, cheese and garlic powder into rice mixture. Spoon 1/2 cup <br>
+                chicken-rice mixture onto center of each tortilla. Fold bottom 1/3 of <br>
+                tortilla over filling; fold in sides toward center, leaving top open. <br>
+                Place seam side down in ungreased 9x9-inch (2-quart) glass baking dish.</li>
+            <li>Cover tightly with foil; bake 20 to 30 minutes or until hot. Garnish with <br>
+                lettuce and tomatoes.</li>
         </ol>
     </body>
 </html>
