--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a><br></li>
+            <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
             <li><a href="recipes/steak.html">Steak</a></li>
         </ul>
     </body>
