--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <img src="img/fallout-guy.jpeg" alt="Fallout guy eating">
         <ul>
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
