--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna</title>
+        <link rel="stylesheet" href="css/recipe-styles.css" />
     </head>
     <body>
         <ul>
