Update all index files and css to make the recipes project per-dee

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -3,49 +3,51 @@
     <head>
         <meta charset="utf-8">
         <title>Steak Recipe</title>
-        <link rel="stylesheet" href="css/recipe-styles.css" />
+        <link rel="stylesheet" href="../css/recipe-styles.css" />
     </head>
     <body>
-        <ul>
+        <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="lasagna.html">Lasagna</a></li>
             <li><a href="chicken-burrito.html">Chicken Burrito</a></li>
         </ul>
 
-        <h1>Steak Recipe</h1>
+        <h1 class="steak">Steak Recipe</h1>
         <img height="300px"width="400px" src="../img/steak.jpg" alt="lasanga">
-        <h2>Description</h2>
-        <p>This Pan-Seared Steak has a garlic rosemary-infused butter that <br>
-            makes it taste steakhouse quality. You’ll be impressed at how easy it  <br>
-            is to make the perfect steak – seared and caramelized on the outside,  <br>
-            and so juicy inside.</p>
-        <p>This 20-minute recipe is done on the stovetop in one pan (no need to  <br>
-            finish it in the oven). This is one of our favorite steak recipes and we  <br>
-            make it year-round because it’s such a quick and convenient cooking  <br>
-            method. That garlic butter is lip-smacking good! Read on for great tips  <br>
-            on how to improve beef sustainability, reduce food waste and you will  <br>
-            love our ideas for easy meal prep with leftover steak.</p>
-        <h3>Ingredients:</h3>
-        <ul>
-            <li>2 New York Strip Steaks, each 1 pound and 1 1/4" thick</li>
-            <li>Butter</li>
-            <li>Garlic</li>
-            <li>Rosemary</li>
-        </ul>
-        <h3>Steps:</h3>
-        <ol>
-            <li><strong>Pat dry</strong> – use paper towels to pat the steaks dry to get a perfect <br>
-                sear and reduce oil splatter.</li>
-            <li><strong>Season generously</strong> – just before cooking steaks, sprinkle both sides  <br>
-                liberally with salt and pepper.</li>
-            <li><strong>Preheat the pan</strong> on medium and brush with oil. Using just 1/2 Tbsp oil  <br>
-                reduces splatter.</li>
-            <li><strong>Sear steaks</strong> – add steaks and sear each side 3-4 minutes until a brown  <br>
-                crust has formed then use tongs to turn steaks on their sides and sear edges (1 min per edge).</li>
-            <li><strong>Add butter and aromatics</strong> – melt in butter with quartered garlic cloves  <br>
-                and rosemary sprigs. Tilt pan to spoon garlic butter over steaks and cook  <br>
-                to your desired doneness.</li>
-            <li><strong>Remove steak</strong> and rest 10 minutes before slicing against the grain.</li>
-        </ol>
+        <div class="steak-div">
+            <h2>Description</h2>
+            <p>This Pan-Seared Steak has a garlic rosemary-infused butter that <br>
+                makes it taste steakhouse quality. You’ll be impressed at how easy it  <br>
+                is to make the perfect steak – seared and caramelized on the outside,  <br>
+                and so juicy inside.</p>
+            <p>This 20-minute recipe is done on the stovetop in one pan (no need to  <br>
+                finish it in the oven). This is one of our favorite steak recipes and we  <br>
+                make it year-round because it’s such a quick and convenient cooking  <br>
+                method. That garlic butter is lip-smacking good! Read on for great tips  <br>
+                on how to improve beef sustainability, reduce food waste and you will  <br>
+                love our ideas for easy meal prep with leftover steak.</p>
+            <h3>Ingredients:</h3>
+            <ul>
+                <li>2 New York Strip Steaks, each 1 pound and 1 1/4" thick</li>
+                <li>Butter</li>
+                <li>Garlic</li>
+                <li>Rosemary</li>
+            </ul>
+            <h3>Steps:</h3>
+            <ol>
+                <li><strong>Pat dry</strong> – use paper towels to pat the steaks dry to get a perfect <br>
+                    sear and reduce oil splatter.</li>
+                <li><strong>Season generously</strong> – just before cooking steaks, sprinkle both sides  <br>
+                    liberally with salt and pepper.</li>
+                <li><strong>Preheat the pan</strong> on medium and brush with oil. Using just 1/2 Tbsp oil  <br>
+                    reduces splatter.</li>
+                <li><strong>Sear steaks</strong> – add steaks and sear each side 3-4 minutes until a brown  <br>
+                    crust has formed then use tongs to turn steaks on their sides and sear edges (1 min per edge).</li>
+                <li><strong>Add butter and aromatics</strong> – melt in butter with quartered garlic cloves  <br>
+                    and rosemary sprigs. Tilt pan to spoon garlic butter over steaks and cook  <br>
+                    to your desired doneness.</li>
+                <li><strong>Remove steak</strong> and rest 10 minutes before slicing against the grain.</li>
+            </ol>
+        </div>
     </body>
 </html>
