--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="css/recipe-styles.css" />
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1 class="main">Odin Recipes</h1>
         <img src="img/fallout-guy.jpeg" alt="Fallout guy eating">
-        <ul>
+        <ul class="nav-links">
             <li><a href="recipes/lasagna.html">Lasagna</a></li>
             <li><a href="recipes/chicken-burrito.html">Chicken Burrito</a></li>
             <li><a href="recipes/steak.html">Steak</a></li>
