--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,51 +3,53 @@
     <head>
         <meta charset="utf-8">
         <title>Lasagna</title>
-        <link rel="stylesheet" href="css/recipe-styles.css" />
+        <link rel="stylesheet" href="../css/recipe-styles.css" />
     </head>
     <body>
-        <ul>
+        <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="chicken-burrito.html">Chicken Burrito</a></li>
             <li><a href="steak.html">Steak</a></li>
         </ul>
 
-        <h1>Lasagna Recipe</h1>
+        <h1 class="lasagna">Lasagna Recipe</h1>
         <img height="300px"width="400px" src="../img/lasagna.jpg" alt="lasanga">
-        <h2>Description</h2>
-        <p>Nothing beats classic lasagna. And this is the easiest recipe<br> 
-            you will ever make. It can be made ahead and it’s freezer-friendly too!</p>
-        <p>So what are you waiting for? Let's get cookin'!</p>
-        <h3>Ingredients:</h3>
-        <ul>
-            <li>9 lasagna noodles</li>
-            <li>1 tablespoon olive oil</li>
-            <li>1 poubd ground beef</li>
-            <li>1 onion, diced</li>
-            <li>Salt and freshly ground black pepper</li>
-            <li>1 (28-ounce) can crusheed tomoatoes</li>
-            <li>1 tablespoon Italian seasoning</li>
-            <li>1 (15-ounce) package whole milk ricotta</li>
-            <li>3 1/2 cups shredded mozzarella, divided</li>
-            <li>1 large egg, beaten</li>
-            <li>1/4 cup freshly grated Parmesan</li>
-            <li>1 tablespoons chopped fresh parsley leaves</li>
-        </ul>
-        <h3>Steps:</h3>
-        <ol>
-            <li>Preheat oven to 350 degrees and oil a 9 x 13 baking dish</li>
-            <li>Cook lasagna noodles in large pot of boiling salt water</li>
-            <li>Heat olive oil in a large skillet over medium heat. Add <br>
-                ground beef and onion and cook until browned, about 3 to 5 minutes. <br>
-                Season with salt and pepper to taste. Drain excess fat and stir in tomatoes<br>
-                and Italian seasoning.</li>
-            <li>In a medium bowl, combine ricotta, 1/2 cup mozzarella, and egg. Set aside</li>
-            <li>Spread 1 cup of tomato mixutre on the bottom of the 9 x 13 baking dish and <br>
-                top with 3 lasagna noodles, 1/2 ricotta cheese mixture, and 1 cup mozzarella cheese. <br>
-                Repeat with second layer. Top with remaining noodles and mixtures.</li>
-            <li>Bake for 35 - 45 minutes, or until bubbling, then broil for 2 - 3 minutes.</li>
-            <li>Let cool 15 minutes</li>
-            <li>Eat it</li>
-        </ol>
+        <div class="lasagna-div">
+            <h2>Description</h2>
+            <p>Nothing beats classic lasagna. And this is the easiest recipe<br> 
+                you will ever make. It can be made ahead and it’s freezer-friendly too!</p>
+            <p>So what are you waiting for? Let's get cookin'!</p>
+            <h3>Ingredients:</h3>
+            <ul>
+                <li>9 lasagna noodles</li>
+                <li>1 tablespoon olive oil</li>
+                <li>1 poubd ground beef</li>
+                <li>1 onion, diced</li>
+                <li>Salt and freshly ground black pepper</li>
+                <li>1 (28-ounce) can crusheed tomoatoes</li>
+                <li>1 tablespoon Italian seasoning</li>
+                <li>1 (15-ounce) package whole milk ricotta</li>
+                <li>3 1/2 cups shredded mozzarella, divided</li>
+                <li>1 large egg, beaten</li>
+                <li>1/4 cup freshly grated Parmesan</li>
+                <li>1 tablespoons chopped fresh parsley leaves</li>
+            </ul>
+            <h3>Steps:</h3>
+            <ol>
+                <li>Preheat oven to 350 degrees and oil a 9 x 13 baking dish</li>
+                <li>Cook lasagna noodles in large pot of boiling salt water</li>
+                <li>Heat olive oil in a large skillet over medium heat. Add <br>
+                    ground beef and onion and cook until browned, about 3 to 5 minutes. <br>
+                    Season with salt and pepper to taste. Drain excess fat and stir in tomatoes<br>
+                    and Italian seasoning.</li>
+                <li>In a medium bowl, combine ricotta, 1/2 cup mozzarella, and egg. Set aside</li>
+                <li>Spread 1 cup of tomato mixutre on the bottom of the 9 x 13 baking dish and <br>
+                    top with 3 lasagna noodles, 1/2 ricotta cheese mixture, and 1 cup mozzarella cheese. <br>
+                    Repeat with second layer. Top with remaining noodles and mixtures.</li>
+                <li>Bake for 35 - 45 minutes, or until bubbling, then broil for 2 - 3 minutes.</li>
+                <li>Let cool 15 minutes</li>
+                <li>Eat it</li>
+            </ol>
+        </div>
     </body>
 </html>
